--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "cwd": "${fileDirname}"
+        },
+        {
             "type": "ahkdbg",
             "request": "launch",
             "name": "AHKDebug",
@@ -12,8 +20,7 @@
             "stopOnEntry": true,
             "captureStreams": true,
             "AhkExecutable": "C:\\\\Program Files\\\\AutoHotkey\\\\AutoHotkey.exe",
-            "port": 9005,
-            "cwd": "${fileDirname}"
+            "port": 9005
         }
     ]
 }
